--- a/app.html
+++ b/app.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <div id="info"></div>
-<div id="rejectionRatioDiv">Rejecion ratio = <span id="rejectionRatioSpan"></span></div>
+<div id="rejectionRatioDiv">Rejection ratio = <span id="rejectionRatioSpan"></span></div>
 <!--
 <div id="github"><a href="https://github.com/chi-feng/mcmc-demo">Github</a></div>
 -->
